--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,8 +11,8 @@
 # -----------------
 en: &DEFAULT_EN
   header:
-    title: Welcome to our Studio!
-    text: It's Nice To Meet You
+    title: Senior Engineering Capstone Portfolio
+    text: Collin Kanofsky
     button: Tell Me More
     buttonlink: "#services"
 
