--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -11,10 +11,10 @@
 # -----------------
 en: &DEFAULT_EN
   header:
-    title: Senior Engineering Capstone Portfolio
-    text: Collin Kanofsky
-    button: Tell Me More
-    buttonlink: "#services"
+    title: Collin Kanofsky
+    text: Senior Engineering Capstone Portfolio
+    button: Capstone Project
+    buttonlink: "#Capstone Porject"
 
   services:
     title: "Services"
