--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,11 @@ remote_theme: raviriley/agency-jekyll-theme
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/agency-jekyll-theme-starter" # the subpath of your site, e.g. /blog
 
-title      : Agency Jekyll Theme Demo
-email      : your-email@example.com #this is also the email contact forms will go to
-description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
-author     : Your Name
+title      : Collin Kanofsky Senior Engineering
+email      : Collin.kanofsky@gmail.com #this is also the email contact forms will go to
+description: "This is my senior engineering capstone portfolio showcasing my growth as an engineer through the class!"
+author     : Collin Kanofsky
+logo       : assets\img\clients\CK-Gear-Logo_APPROVED-125x125.png
 # logo:     #optional, defaults to site title
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
