--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,8 +19,8 @@ en: &DEFAULT_EN
       section: about
     - title: "Timeline"
       section: timeline
-    - title: "Blog"
-      section: Blog
+    - title: "Daily Journal"
+      section: DailyJournal
     - title: "Contact"
       section: contact
 en-US:
