--- a/_data/style.yml
+++ b/_data/style.yml
@@ -4,5 +4,5 @@
 #black: "#000"
 
 #Image Customization
-header-image: "../img/portfolio/Mechanical/8020FrameStart.png"
+header-image: "../img/header-bg.jpg"
 contact-image: "../img/map-image.png"
