updated for portfolio1

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -33,13 +33,13 @@ en: &DEFAULT_EN
 
   portfolio:
     title: "Portfolio"
-    text: "Lorem ipsum dolor sit amet consectetur."
+    text: "Robopack Portfolio"
     section: portfolio
     closebutton: "Close Project"
 
   timeline:
     title: "Timeline"
-    text: "Lorem ipsum timeline"
+    text: "Project Timeline"
     section: timeline
     # left is the default
     #start_align: "left"
